platform-stable/resources/storefront-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront
spec:
  template:
    metadata:
      annotations:
        reloader.stakater.com/search: "true"
        configmap.reloader.stakater.com/reload: "vcplatform-storefront-cm, vcplatform-platform-cm, vcplatform-deployment-cm, vcplatform-platform-secret-configmap"
    spec:
        imagePullSecrets:
        - name: dockerconfigjson-github-com
        containers:
        - name: vc-storefront-web
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #   failureThreshold: 3
          #   successThreshold: 1
          #   initialDelaySeconds: 5
          #   periodSeconds: 1
          volumeMounts:
            - mountPath: /opt/virtocommerce/storefront/wwwroot/cms-content
              name: cms-content-data
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
