platform-stable/resources/ingress-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-https
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '16'
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts: 
      - "$(VC_STOREFRONT_SERVICE).$(VC_NAMESPACE).govirto.com"
      secretName: $(VC_STOREFRONT_SERVICE)-$(VC_NAMESPACE)-tls
    - hosts:   
      - "$(VC_PLATFORM_SERVICE).$(VC_NAMESPACE).govirto.com"
      secretName: $(VC_PLATFORM_SERVICE)-$(VC_NAMESPACE)-tls
  rules:
  - host: $(VC_STOREFRONT_SERVICE).$(VC_NAMESPACE).govirto.com
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
  - host: $(VC_PLATFORM_SERVICE).$(VC_NAMESPACE).govirto.com
    http:
      paths:
      - backend:
          serviceName: platform
          servicePort: 80
        path: /
